<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deslogado"
            android:textAlignment="center"
            android:textColor="@color/blue_grey_700" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:backgroundTint="@color/blue_grey_700"
        android:text="@string/btn_login"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btnNConta"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/novo_usuario"
        android:textAllCaps="false"
        android:textColor="@color/blue_grey_700"
        android:textStyle="italic" />
</LinearLayout>